<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".fee.act.MainFeedbackActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_contain1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/general_title_bar" />

        <RadioGroup
            android:id="@+id/rg_radio"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_ger_title">

            <RadioButton
                android:id="@+id/rb_problem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:checked="true"
                android:text="@string/account_problem"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rb_suggest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suggestion"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RadioGroup>

        <EditText
            android:id="@+id/et_suggest_problem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/round_corner_bg"
            android:gravity="top"
            android:hint="@string/feedback_input_hint"
            android:minLines="10"
            android:padding="15dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_radio" />

        <RelativeLayout
            android:id="@+id/rl_select_module"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="28dp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_suggest_problem">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/select_module"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_select_module"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:drawableEnd="@drawable/ic_chevron_right_black"
                android:textColor="#9093A2"
                android:textSize="18sp" />
        </RelativeLayout>


        <EditText
            android:id="@+id/et_phone_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/round_corner_bg"
            android:gravity="top"
            android:hint="@string/phone_mail_hint"
            android:lines="1"
            android:maxLines="1"
            android:padding="15dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/btn_submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rl_select_module" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/button_back"
            android:padding="15dp"
            android:text="@string/submit"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_phone_mail" />
    </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:id="@+id/ll_contain1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone">
            <WebView
                android:id="@+id/webview"

                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

    <com.kali_corporation.freeonlinetranslation.activity.view.LoadingView
        android:id="@+id/loadingview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8d000000"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>